[package]
name = "jenkins_api"
version = "0.9.0"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "Bindings for the Jenkins JSON API"
repository = "https://github.com/mockersf/jenkins-api.rs"
homepage = "https://github.com/mockersf/jenkins-api.rs"
documentation = "https://docs.rs/jenkins_api"
keywords = ["jenkins"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "2.1"
regex = "1.4"
log = "0.4"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"], default-features = false }

[dev-dependencies]
env_logger = "0.11"
mockito = "1.6"
spectral = "0.6"
proptest = "1.5"
tokio = { version = "1.41", features = ["test-util", "macros"] }

[features]
default = ["reqwest/default-tls"]
extra-fields-visibility = []
rustls-tls = ["reqwest/rustls-tls"]
